org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/failing/ShadowingTests_ImportAndInnerClassesNamesAreTheSameBadCase2_Rdef.alf.xt
/* 
XPECT_SETUP org.omg.sysml.xpect.tests.validation.SysMLValidationTest
	ResourceSet {
		ThisFile {}
		File {from ="/library/Base.alf"}
		File {from ="/src/DependencyOuterPackage_Feature_Rdef.alf"}
	}
	Workspace {
		JavaProject {
			SrcFolder {
				ThisFile {}
				File {from ="/library/Base.alf"}
				File {from ="/src/DependencyOuterPackage_Feature_Rdef.alf"}
			}
		}
	}
END_SETUP 
*/

package test{
	import OuterPackage::*;
	feature A{
		feature a2{}
	}
	feature B redefines A {
		/* XPECT errors --- 
		   "Couldn't resolve reference to Feature 'a1'." at "a1"
		"The feature 'type' of 'org.omg.sysml.lang.sysml.impl.FeatureImpl@2dd2e270{file:/C:/install_dir/org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/validation/a_ShadowingTests_ImportAndInnerClassesNamesAreTheSameBadCase2_Rdef.alf.xt#//@ownedRelationship.2/@ownedRelatedElement.0/@ownedRelationship.1/@ownedRelatedElement.0}' with 0 values must have at least 1 values" at "b redefines a1{}"
		--- */
		feature b redefines a1{}
	}
}